plugins {
    id 'java'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'gnu.getopt:java-getopt:1.0.13'
    implementation 'org.yaml:snakeyaml:2.2'

    testImplementation 'junit:junit:4.13.2'
    testImplementation 'org.hamcrest:hamcrest-core:1.3'
    testImplementation 'org.mockito:mockito-core:2.28.2'
}

java {
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8
}

sourceSets {
    main {
        java { srcDirs = ['src'] }
    }
    test {
        java {
            srcDirs = ['tests']
            // These two files use Mockito ArgumentMatcher as an interface,
            // which was changed to a class in Mockito 2.x and breaks compilation.
            // Pre-existing issue unrelated to the YAML loader work.
            exclude '**/QControllerTest.java'
            exclude '**/JavaMidiReceiverTest.java'
        }
    }
}

test {
    // run from project root so relative paths in tests (e.g. "tests/qualm/qdl-1.yaml") resolve
    workingDir = projectDir
    exclude '**/StressTest.class'
    testLogging {
        events 'passed', 'failed', 'skipped'
        exceptionFormat 'full'
    }
}
